# extractor_de_naves_rust

./: .gitignore  Cargo.toml  build.rs
src/: main.rs  model.rs
src/utils/: exportar.rs  extraer_texto.rs  fechas.rs  leer_agentes.rs  mod.rs  parsear_linea_nave.rs  parsear_naves.rs  procesar_naves_para_excel.rs
