[package]
name = "naves"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
pdf-extract = "0.7"
tokio = { version = "1", features = ["full"] }
rust_xlsxwriter = "0.90.2"
chrono = { version = "0.4", features = ["serde"] }
calamine = "0.25"
clap = { version = "4.4", features = ["derive"] }


[build-dependencies]
winres = "0.1"
